# sick_safevisionary_base

./: .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  sick_safevisionary_baseConfig.cmake
.github/workflows/: industrial_ci_humble_action.yml  industrial_ci_iron_action.yml  industrial_ci_noetic_action.yml  industrial_ci_rolling_action.yml
include/sick_safevisionary_base/: AuthenticationLegacy.h  AuthenticationSecure.h  CRC.h  CoLa2ProtocolHandler.h  CoLaBProtocolHandler.h  CoLaCommand.h  CoLaCommandType.h  CoLaError.h  CoLaParameterReader.h  CoLaParameterWriter.h  ControlSession.h  IAuthentication.h  IProtocolHandler.h  ITransport.h  MD5.h  PointCloudPlyWriter.h  PointXYZ.h  SHA256.h  SafeVisionaryControl.h  SafeVisionaryData.h  SafeVisionaryDataStream.h  TcpSocket.h  UdpSocket.h  VisionaryAutoIPScan.h  VisionaryControl.h  VisionaryData.h  VisionaryDataStream.h  VisionaryEndian.h  tinyxml2.h
resources/doc/: safety_designer.md
src/: AuthenticationLegacy.cpp  AuthenticationSecure.cpp  AuthenticationSecure.h  CRC.cpp  CRC.h  CoLa2ProtocolHandler.cpp  CoLaBProtocolHandler.cpp  CoLaCommand.cpp  CoLaError.h  CoLaParameterReader.cpp  CoLaParameterReader.h  CoLaParameterWriter.cpp  ControlSession.cpp  IAuthentication.cpp  IProtocolHandler.cpp  IProtocolHandler.h  MD5.cpp  PointCloudPlyWriter.cpp  PointXYZ.h  SHA256.cpp  SafeVisionaryControl.cpp  SafeVisionaryData.cpp  SafeVisionaryDataStream.cpp  TcpSocket.cpp  UdpSocket.cpp  UdpSocket.h  VisionaryAutoIPScan.cpp  VisionaryAutoIPScan.h  VisionaryControl.cpp  VisionaryData.cpp  VisionaryData.h  VisionaryDataStream.cpp  VisionaryEndian.h  VisionarySData.cpp  VisionarySData.h  VisionaryTData.cpp  VisionaryTData.h  VisionaryTMiniData.cpp  VisionaryTMiniData.h  tinyxml2.cpp
third-party-licenses/: license-notices.json
