<?xml version="1.0"?>
<package format="2">
  <name>sick_safevisionary_base</name>
  <version>0.0.1</version>
  <description>The sick_safevisionary_base package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="grosse@todo.todo">grosse</maintainer>

  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
