<?xml version="1.0"?>
<package format="2">
  <name>sick_safevisionary_base</name>
  <version>1.0.1</version>
  <description>The package provides the basic hardware interface to the SICK Safevisionary sensor</description>

  <maintainer email="grosse@fzi.de">Marvin Grosse Besselmann</maintainer>
  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
